            ----------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

11 November 2014  M. Kelsey (hadr-casc-V10-00-14)
-------------------------------------------------
- G4CascadeParameters.cc:  Revert default changes in V10-00-12 tag:  turn
  off phase-space, trailing-effect, and PreCompound.

- G4InuclCollider.cc:  Replace G4Fragment::GetA() with GetA_asInt().

- G4ElementaryParticleCollider.cc:  Improve optional pion-nucleon
  absorption.  NOTE:  This is DISABLED by default; used for studies of pion
  stopping.

- G4NucleiModel.cc:  Initialize local p1r variable in declaration.

30 October 2014  M. Kelsey (hadr-casc-V10-00-13)
------------------------------------------------
- G4CascadeParameters, G4CascadeParamMessenger:  Add flag to enable
  absorbing pion on a single nucleon.  See G4EPCollider below for details.

- G4ElementaryParticleCollider:  Add support for absorbing a pion with a
  single nucleon (via a charge exchange interaction, e.g. pi- p -> n), with
  momentum conservation handled by recoiling against the nucleus.  This is
  intended to improve the match to data for pi- capture.

- G4NucleiModel.cc:  In boundaryTransition(), switch sign of "dv" so that
  particle sees a barrier (next_zone potential > current potential) as
  positive.  In generateParticleFate(), pass (A,Z) to EPCollider for
  possible nuclear-recoil calculations.

- G4CascadeCheckBalance.cc:  Per V.Ivantchenko, use G4Fragment::GetZ_asInt(),
  GetZ_asInt().  Should have been done long ago.

1 October 2014  M. Kelsey (hadr-casc-V10-00-12)
-----------------------------------------------
- G4CascadeCheckBalance:  Change ctor arg from "const char*" to "const